--- a/ball_and_plate_study/Arduino/3. 엔코더 모터.md
+++ b/ball_and_plate_study/Arduino/3. 엔코더 모터.md
@@ -49,3 +49,126 @@ Method 1에 비해 Method 2가 2배 더 정밀하게 측정할 수 있다는 장
 
 참고로 로터리 엔코더의 resolution (분해능)은 CPR (count per revolution) 이라는 단위를 사용한다.Method 1 으로 하면 CPR의 2배, Method 2 로 하면 CPR의 4배에 해당하는 pulse를 측정할 수 있다. 즉, datasheet에 500 CPR이라 되어 있다면, Method 2 로 측정하면 한바퀴에 2000 pulse가 측정되는 것이다.
 
+### 2. 제어 코드
+---
+``` cpp
+#include <MsTimer2.h>  // 주기적으로 인터럽트를 발생시키기 위한 라이브러리
+
+// 엔코더 A, B 채널 핀 설정
+#define encoder_1_A 2
+#define encoder_1_B 3
+
+int estep_1 = 0;           // 엔코더 스텝 카운트
+boolean direction_1;       // 회전 방향 저장 변수
+int angle_1 = 0;           // 각도 (현재 사용되지 않음)
+
+int motor_speed = 5;       // 모터 속도 제어용 PWM 출력 핀
+int motor_dir_1 = 6;       // 모터 방향 제어 핀 1
+int motor_dir_2 = 7;       // 모터 방향 제어 핀 2
+
+int Ref_1 = 250;           // 목표 속도 (Pulse/s)
+int Err_1 = 0;             // 현재 오차
+int DErr_1 = 0;            // 오차 변화량 (Derivative)
+int LErr_1 = 0;            // 이전 오차 (Last Error)
+
+// PID 제어 계수
+float kp = 0.2;            // 비례 계수
+float ki = 0.2;            // 적분 계수
+float kd = 0.03;           // 미분 계수
+
+// PID 계산 결과 저장 변수
+float result_P = 0;
+float result_I = 0;
+float result_D = 0;
+float result = 0;
+
+float vel_1;               // 현재 속도
+float Lstep_1;             // 이전 스텝 값
+
+void setup() {
+  Serial.begin(9600);  // 시리얼 통신 시작 (모니터 출력용)
+
+  // 핀 모드 설정
+  pinMode(encoder_1_A, INPUT);
+  pinMode(encoder_1_B, INPUT);
+  pinMode(motor_speed, OUTPUT);
+  pinMode(motor_dir_1, OUTPUT);
+  pinMode(motor_dir_2, OUTPUT);
+
+  // 엔코더 인터럽트 설정 (FALLING 엣지에서 encoder_1 함수 호출)
+  attachInterrupt(0, encoder_1, FALLING);
+
+  // 200ms마다 t_interrupt 함수 실행 (PID 제어 주기)
+  MsTimer2::set(200, t_interrupt);
+  MsTimer2::start();
+}
+
+void loop() {
+  // 메인 루프에서는 아무것도 하지 않음 (PID는 인터럽트로 수행됨)
+}
+
+// 엔코더 인터럽트 함수: 회전 방향에 따라 스텝 값 증가/감소
+void encoder_1() {
+  direction_1 = digitalRead(encoder_1_B);  // B 채널 값 읽기
+
+  if (direction_1 == HIGH) {
+    estep_1--;  // 반시계 방향
+  } else if (direction_1 == LOW) {
+    estep_1++;  // 시계 방향
+  }
+}
+
+// PID 제어 함수
+void pid_control() {
+  // 속도 계산: 일정 시간 동안의 엔코더 변화량
+  vel_1 = (estep_1 - Lstep_1) / 0.2;
+  Lstep_1 = estep_1;  // 현재 스텝 값을 다음 비교를 위해 저장
+
+  // 오차 계산
+  Err_1 = Ref_1 - vel_1;
+
+  // PID 계산
+  result_P = kp * Err_1;         // 비례항
+  result_I += ki * Err_1;        // 적분항 (누적)
+  DErr_1 = Err_1 - LErr_1;       // 오차 변화량
+  result_D = kd * DErr_1;        // 미분항
+  LErr_1 = Err_1;                // 현재 오차를 이전 오차로 저장
+
+  result = result_P + result_I + result_D;  // PID 출력 합산
+
+  // 모터 회전 방향 및 PWM 출력
+  if (result >= 0) {
+    digitalWrite(motor_dir_1, LOW);   // 정방향
+    digitalWrite(motor_dir_2, HIGH);
+    if (result > 255) result = 255;   // PWM 상한 제한
+    analogWrite(motor_speed, result); // PWM 출력
+  } else {
+    digitalWrite(motor_dir_1, HIGH);  // 역방향
+    digitalWrite(motor_dir_2, LOW);
+    if (result < -255) result = -255; // PWM 하한 제한
+    analogWrite(motor_speed, -result); // 음수이므로 부호 반전
+  }
+}
+
+// 200ms마다 호출되는 타이머 인터럽트 함수
+void t_interrupt() {
+  pid_control();  // PID 제어 수행
+
+  // 시리얼 모니터 출력
+  Serial.print("PWM : ");
+  Serial.print(result);
+  Serial.print(", Velocity : ");
+  Serial.print(vel_1);
+  Serial.print(", Encoder_1 : ");
+  Serial.println(estep_1);
+}
+```
+
+
+### 3. 감속비
+---
+``` 
+COUNTS_PER_DEGREE = (엔코더 CPR × 4 × 감속비) ÷ 360.0
+```
+
+
