--- a/ball_and_plate_study/ball and plate/개요.md
+++ b/ball_and_plate_study/ball and plate/개요.md
@@ -1,1 +1,221 @@
 ![[Pasted image 20250520141808.png]]
+
+![[Pasted image 20250604165013.png]]
+
+
+
+### 1. 모델
+---
+``` python
+import serial
+import time
+import numpy as np
+from your_rl_model import sac_model  # 이미 훈련된 SAC 모델 가져오기'
+
+# 시리얼 포트 연결 (포트 이름은 환경에 따라 변경)
+ser = serial.Serial('COM15', 9600)
+time.sleep(2)  # 아두이노 초기화 대기
+
+def send_action(action):
+    """
+    action: np.array of shape (2,) with values in [-1, 1]
+    """
+    # 범위 [-1, 1] → [-255, 255]로 변환 후 정수화
+    pwm_x = int(np.clip(action[0], -1, 1) * 255)
+    pwm_y = int(np.clip(action[1], -1, 1) * 255)
+
+    # 문자열로 포맷팅 후 전송 (예: "123,-45\n")
+    msg = f"{pwm_x},{pwm_y}\n"
+    ser.write(msg.encode())
+
+# 예시 실행
+while True:
+    # 예시 상태 (실제 시스템에선 roll/pitch 등 측정값)
+    state = get_current_state()  # 사용자 구현 필요
+    action = sac_model.select_action(state)
+    send_action(action)
+    time.sleep(0.2)  # 200ms 주기
+
+```
+
+``` cpp
+#include <Arduino.h>
+
+int motor_x_pwm = 5;
+int motor_x_dir1 = 6;
+int motor_x_dir2 = 7;
+
+int motor_y_pwm = 9;
+int motor_y_dir1 = 10;
+int motor_y_dir2 = 11;
+
+void setup() {
+  Serial.begin(9600);
+  pinMode(motor_x_pwm, OUTPUT);
+  pinMode(motor_x_dir1, OUTPUT);
+  pinMode(motor_x_dir2, OUTPUT);
+  pinMode(motor_y_pwm, OUTPUT);
+  pinMode(motor_y_dir1, OUTPUT);
+  pinMode(motor_y_dir2, OUTPUT);
+}
+
+void loop() {
+  if (Serial.available()) {
+    String input = Serial.readStringUntil('\n'); // "123,-45"
+    int commaIndex = input.indexOf(',');
+    if (commaIndex > 0) {
+      int pwm_x = input.substring(0, commaIndex).toInt();
+      int pwm_y = input.substring(commaIndex + 1).toInt();
+
+      // x축 모터 제어
+      if (pwm_x >= 0) {
+        digitalWrite(motor_x_dir1, LOW);
+        digitalWrite(motor_x_dir2, HIGH);
+        analogWrite(motor_x_pwm, pwm_x);
+      } else {
+        digitalWrite(motor_x_dir1, HIGH);
+        digitalWrite(motor_x_dir2, LOW);
+        analogWrite(motor_x_pwm, -pwm_x);
+      }
+
+      // y축 모터 제어
+      if (pwm_y >= 0) {
+        digitalWrite(motor_y_dir1, LOW);
+        digitalWrite(motor_y_dir2, HIGH);
+        analogWrite(motor_y_pwm, pwm_y);
+      } else {
+        digitalWrite(motor_y_dir1, HIGH);
+        digitalWrite(motor_y_dir2, LOW);
+        analogWrite(motor_y_pwm, -pwm_y);
+      }
+    }
+  }
+}
+
+```
+
+
+상태 벡터
+``` python
+state = [roll, pitch, gyro_x, gyro_y]  # 총 4차원
+```
+
+``` cpp
+#include <Wire.h>
+#include <MPU6050.h>
+
+MPU6050 imu;
+
+float roll = 0, pitch = 0;
+float gyro_x = 0, gyro_y = 0;
+
+void setup() {
+  Serial.begin(9600);
+  Wire.begin();
+  imu.initialize();
+
+  if (!imu.testConnection()) {
+    Serial.println("MPU6050 연결 실패!");
+    while (1);
+  }
+}
+
+void loop() {
+  imu.getMotion6(&ax, &ay, &az, &gx, &gy, &gz);
+
+  // 자이로값을 각속도로 변환 (단위: deg/s)
+  gyro_x = gx / 131.0;
+  gyro_y = gy / 131.0;
+
+  // roll, pitch 계산 (단순 가속도 기반)
+  roll = atan2(ay, az) * 180 / PI;
+  pitch = atan2(-ax, sqrt(ay * ay + az * az)) * 180 / PI;
+
+  // 시리얼로 상태 전송: 예) "roll,pitch,gyro_x,gyro_y\n"
+  Serial.print(roll); Serial.print(",");
+  Serial.print(pitch); Serial.print(",");
+  Serial.print(gyro_x); Serial.print(",");
+  Serial.println(gyro_y);
+
+  delay(50);  // 20Hz 주기
+}
+
+```
+
+``` python
+import serial
+
+ser = serial.Serial('COM15', 9600)
+
+def get_state():
+    line = ser.readline().decode().strip()  # "3.4,-1.2,0.05,-0.10"
+    vals = list(map(float, line.split(",")))
+    return vals  # [roll, pitch, gyro_x, gyro_y]
+
+```
+
+보상 함수
+
+``` python
+def compute_reward(state):
+    roll, pitch, gyro_x, gyro_y = state
+
+    # 각도 보상: 수평에서 멀어질수록 패널티
+    angle_penalty = roll**2 + pitch**2
+
+    # 각속도 보상: 진동이 심하면 공이 탈출 가능
+    gyro_penalty = 0.01 * (gyro_x**2 + gyro_y**2)
+
+    # 총 보상은 음의 패널티
+    reward = - (angle_penalty + gyro_penalty)
+    return reward
+```
+
+``` python
+import serial
+import time
+import numpy as np
+
+# 🔧 아두이노 연결 설정 (포트는 시스템에 맞게 수정)
+ser = serial.Serial('COM15', 9600, timeout=1)
+time.sleep(2)  # 아두이노 초기화 대기
+
+# 💡 SAC 모델 로딩 (사용자가 구현한 SAC 클래스 사용)
+from your_sac_module import SACModel  # 사용자가 만든 SAC 모델 import
+sac_model = SACModel.load("your_model_path.pt")  # 모델 로드
+
+# 상태 읽기 함수 (roll, pitch, gyro_x, gyro_y)
+def get_state_from_serial():
+    try:
+        line = ser.readline().decode().strip()  # 예: "State: 2.1,-0.8,0.2,-0.1"
+        if not line.startswith("State:"):
+            return None
+        data = line.replace("State:", "").strip()
+        roll, pitch, gyro_x, gyro_y = map(float, data.split(","))
+        return np.array([roll, pitch, gyro_x, gyro_y], dtype=np.float32)
+    except:
+        return None
+
+# action → 시리얼 전송 함수
+def send_action(action):
+    # [-1, 1] → [-255, 255] 범위로 스케일링
+    pwm_x = int(np.clip(action[0], -1, 1) * 255)
+    pwm_y = int(np.clip(action[1], -1, 1) * 255)
+    msg = f"{pwm_x},{pwm_y}\n"
+    ser.write(msg.encode())
+
+# 🔁 제어 루프
+while True:
+    state = get_state_from_serial()
+    if state is None:
+        continue  # 잘못된 상태는 무시
+
+    # 모델로부터 행동 추론
+    action = sac_model.select_action(state)  # shape: (2,) ∈ [-1, 1]
+
+    # 아두이노로 전송
+    send_action(action)
+
+    time.sleep(0.05)  # 50ms 주기 (20Hz)
+
+```
