--- a/ball_and_plate_study/Arduino/4. MPU 6050.md
+++ b/ball_and_plate_study/Arduino/4. MPU 6050.md
@@ -1,3 +1,5 @@
+![[Pasted image 20250607042845.png]]
+
 ``` cpp
 #include <Wire.h>
 #include <MPU6050.h>
@@ -43,7 +45,7 @@ void loop() {
 
   // 오프셋 보정 적용
   roll = normalize_angle(atan2((float)accY, (float)accZ) * 180.0 / PI - roll_offset);
-  pitch = normalize_angle(atan2(-(float)(-accX), sqrt((float)accY * accY + (float)accZ * accZ)) * 180.0 / PI - pitch_offset);
+  pitch = normalize_angle(atan2((float)(-accX), sqrt((float)accY * accY + (float)accZ * accZ)) * 180.0 / PI - pitch_offset);
 
 
 
@@ -54,6 +56,8 @@ void loop() {
 
   delay(100);
 }
+
+
 
 ```
 
